Thank You Confirmation.html

--- a/Thank You Confirmation.html
+++ b/Thank You Confirmation.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <h1>Thank You!</h1>
-    <p>We've recieved your response. Please see our support page for more information. Feel free to reach out with any further questions!</p>
-    <p><a href="https://info.heartlandschoolsolutions.com/support-central"></a></p>
+    <p>We've recieved your response. Please see our support page for more information. Feel free to reach out with any further questions.</p>
+    <p><a href="https://info.heartlandschoolsolutions.com/support-central">Our Support Page</a></p>
 </body>
 </html>
